# nixblitz

./: .gitignore  .remotes.json.sample  LICENSE  README.md  _typos.toml  default.nix  flake.nix  justfile
.github/workflows/: deploy.yml
crates/: Cargo.toml
crates/nixblitz_cli/: .envrc  Cargo.toml  README.md  build.rs  default.nix
crates/nixblitz_cli/src/: action.rs  app.rs  app_contexts.rs  cli.rs  commands.rs  components.rs  config.rs  errors.rs  logging.rs  main.rs  tui.rs  tui2.rs  tui2_components.rs  tui_components.rs  tui_shared.rs  tui_system_ws_utils.rs
crates/nixblitz_cli/src/commands/: apply.rs  init.rs  install.rs  set.rs  tui.rs
crates/nixblitz_cli/src/components/: app_list.rs  app_options.rs  list_options.rs  menu.rs  password_input.rs  theme.rs  title.rs
crates/nixblitz_cli/src/components/list_options/: base_option.rs  bool.rs  manual_string_list.rs  net_address.rs  number.rs  number_popup.rs  password.rs  password_confirm_popup.rs  path.rs  popup.rs  popup_confirm_btn_bar.rs  port.rs  string_list.rs  string_list_popup.rs  text.rs  text_popup.rs
crates/nixblitz_cli/src/pages/: actions_page.rs  apps_page.rs  help_page.rs  settings_page.rs
crates/nixblitz_cli/src/tui2_components/: app_list.rs  list.rs  net_address_popup.rs  number_popup.rs  password_input_popup.rs  popup.rs  text_input_popup.rs  utils.rs
crates/nixblitz_cli/src/tui2_components/list/: list_item.rs  select_list.rs  selectable_list.rs
crates/nixblitz_cli/src/tui_components/: app_list.rs  app_option_list.rs  configurator.rs  confirm.rs  confirm_input.rs  confirm_input_inline.rs  confirm_input_inview.rs  custom_text_input.rs  engine_off_help_popup.rs  install.rs  list.rs  log_viewer.rs  net_address_popup.rs  number_popup.rs  password_input_popup.rs  popup.rs  spinner.rs  text_input_popup.rs  utils.rs
crates/nixblitz_cli/src/tui_components/install/: configurator_screen.rs  install_disk_selection.rs  install_success.rs  installing.rs  logo.rs  pre_install_confirm.rs  system_check_completed.rs  welcome.rs
crates/nixblitz_cli/src/tui_components/list/: list_item.rs  selectable_list.rs
crates/nixblitz_core/: Cargo.toml
crates/nixblitz_core/src/: app_config.rs  app_option_data.rs  apps.rs  constants.rs  errors.rs  installer.rs  lib.rs  locales.rs  number_value.rs  shells.rs  strings.rs  system.rs  system_info.rs  system_platform.rs  utils.rs
crates/nixblitz_core/src/app_option_data/: bool_data.rs  net_address_data.rs  number_data.rs  option_data.rs  text_edit_data.rs
crates/nixblitz_core/src/option_definitions/: bitcoind.rs  cln.rs  nix_base.rs
crates/nixblitz_installer_engine/: Cargo.toml
crates/nixblitz_installer_engine/src/: core.rs  engine.rs  main.rs
crates/nixblitz_norupo/: Cargo.toml  default.nix  package-lock.json
crates/nixblitz_norupo/assets/: tailwind.css
crates/nixblitz_norupo/src/: backend.rs  classes.rs  components.rs  installer_engine_connection.rs  main.rs  pages.rs  routes.rs  string_formatters.rs  system_engine_connection.rs
crates/nixblitz_norupo/src/components/: app.rs  button.rs  configurator.rs  install.rs  option_editors.rs
crates/nixblitz_norupo/src/components/install/: install_step_row.rs  install_success.rs  installing.rs  pre_install_confirm.rs  select_disk.rs  system_check_display.rs  welcome.rs
crates/nixblitz_norupo/src/components/option_editors/: bool_option_editor.rs  manual_string_list_option_editor.rs  netaddress_option_editor.rs  number_option_editor.rs  password_option_editor.rs  path_option_editor.rs  port_option_editor.rs  string_list_option_editor.rs  text_option_editor.rs
crates/nixblitz_norupo/src/pages/: config.rs  install.rs
crates/nixblitz_system/: Cargo.toml
crates/nixblitz_system/src/: apply_changes.rs  bitcoind.rs  blitz_api.rs  blitz_webui.rs  cln.rs  installer.rs  lib.rs  lnd.rs  nix_base_config.rs  project.rs  utils.rs
crates/nixblitz_system/src/template/: justfile
crates/nixblitz_system/src/template/src/: blitz.nix  configuration.common.nix.templ  disko-config-single-disk.nix  flake.nix
crates/nixblitz_system/src/template/src/blitz/: api.nix.templ  web.nix.templ
crates/nixblitz_system/src/template/src/btc/: bitcoind.nix.templ  cln.nix.templ
crates/nixblitz_system/src/template/src/configs/nushell/: config.nu
crates/nixblitz_system/src/template/src/nix-bitcoin/: enable-tor.nix  secure-node.nix
crates/nixblitz_system/src/template/src/x86/: configuration.nix.templ
crates/nixblitz_system/tools/: locale_db_builder.nu
crates/nixblitz_system_engine/: Cargo.toml
crates/nixblitz_system_engine/src/: core.rs  engine.rs  main.rs
crates/nixblitz_web/: Cargo.toml  Dioxus.toml.templ  default.nix
crates/nixblitz_web/src/: components.rs
crates/nixblitz_web/src/components/: dropdown.rs  input_type.rs
crates/nixblitz_web/src/components/option_editors/: bool_option_editor.rs  manual_string_list_option_editor.rs  password_option_editor.rs  path_option_editor.rs  port_option_editor.rs  text_option_editor.rs
docs/: .wakatime-project  README.md  default.nix  docusaurus.config.js  flake.nix  justfile  package-lock.json  package.json
docs/docs/: 01_intro.md  02_install.md  02_overview.md  03_install.md  03_managing.md  04_managing.md
docs/docs/dev/: _category_.json  building.md  create_images.md  dev_env.md  known_problems.md  repo_layout.md  roadmap.md  why_nixos.md
docs/src/components/: AsciinemaPlayerManual.js
docs/src/css/: custom.css
docs/src/pages/: index.module.css
docs/static/casts/: install_demo.cast  tui_demo.cast
docs/static/diagrams/: architecture.html
installer/: configuration.nix  flake.nix
installer/nix_store_cfg/: blitz.nix  configuration.common.nix  disko-config-single-disk.nix  flake.nix
installer/nix_store_cfg/blitz/: api.nix  web.nix
installer/nix_store_cfg/btc/: bitcoind.nix  cln.nix  lnd.nix
installer/tools/: dev_scripts.nu  run_vm.nu
modules/: nixblitz-docs.nix  nixblitz-webapp.nix  nixblitz_cli.nix  nixblitz_install_engine.nix  nixblitz_norupo.nix  nixblitz_system_engine.nix  nixblitz_web.nix
scripts/: update-default-nix.nu
(+4 files in other folders)
