[workspace]

members = ["nixblitz_cli", "nixblitz_core", "nixblitz_system", "nixblitz_norupo"]
resolver = "2"

[workspace.dependencies]
nixblitz_cli = { path = "nixblitz_cli" }
nixblitz_core = { path = "nixblitz_core" }
nixblitz_system = { path = "nixblitz_system" }
nixblitz_norupo = { path = "nixblitz_norupo" }

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
