[workspace]

members = [
  "nixblitz_cli",
  "nixblitz_core",
  "nixblitz_installer_engine",
  "nixblitz_norupo",
  "nixblitz_system",
]
resolver = "2"

[workspace.dependencies]
nixblitz_cli = { path = "nixblitz_cli" }
nixblitz_core = { path = "nixblitz_core" }
nixblitz_installer_engine = { path = "nixblitz_installer_engine" }
nixblitz_norupo = { path = "nixblitz_norupo" }
nixblitz_system = { path = "nixblitz_system" }

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
