[workspace]

members = [
  "nixblitz_cli",
  "nixblitz_core",
  "nixblitz_installer_engine",
  "nixblitz_norupo",
  "nixblitz_system",
  "nixblitz_system_engine",
]
resolver = "2"

[workspace.dependencies]
nixblitz_core = { path = "nixblitz_core" }
nixblitz_system = { path = "nixblitz_system" }

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
