[package]
name = "nixblitz_cli"
version = "0.1.0"
edition = "2024"
description = "A CLI interface to the RaspiBlitz project."
resolver = "2"

authors = ["fusion44 <git.bleep096@passmail.net>"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "nixblitz"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.17", features = ["derive", "cargo", "wrap_help", "unicode", "string", "unstable-styles", "env"] }
crossterm = { version = "0.28.1", features = ["serde", "event-stream"] }
serde_json = "1.0.140"
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
tokio-tungstenite = "0.27.0"
nixblitz_system = { workspace = true }
nixblitz_core = { workspace = true }
error-stack = "0.5.0"
thiserror = "1.0.63"
log = "0.4.27"
fern = "0.7.1"
chrono = "0.4.39"
dirs = "6.0.0"
tempfile = "3.20.0"
iocraft = "0.7.10"
futures-util = "0.3.31"

[build-dependencies]
vergen = { version = "9.0.6", features = ["build"] }
vergen-git2 = { version = "1.0.7", features = ["build"] }
