[package]
name = "nixblitz_core"
version = "0.1.0"
edition = "2024"

[dependencies]
error-stack = "0.5.0"
once_cell = "1.20.2"
serde = { version = "1.0.219", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
sysinfo = "0.35.2"
thiserror = "1.0.63"
