[package]
name = "nixblitz_installer_engine"
version = "0.1.0"
edition = "2024"

build = "build.rs"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
env_logger = "0.11.8"
error-stack = "0.5.0"
futures = "0.3.31"
log = "0.4.27"
nixblitz_core = { workspace = true }
nixblitz_system = { workspace = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = "0.26.3"
strum_macros = "0.26.4"
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = "0.1.17"
tower-http = { version = "0.6.6", features = ["cors"] }

[build-dependencies]
vergen = { version = "9.0.6", features = ["build"] }
vergen-git2 = { version = "1.0.7", features = ["build"] }
