[package]
name = "nixblitz_norupo"
version = "0.1.0"
authors = ["fusion44 <git.bleep096@passmail.net>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nixblitz_core = { workspace = true }
nixblitz_system = { workspace = true, optional = true }
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
dioxus-i18n = "0.4.3"
dioxus-logger = "0.6.2"
dioxus-material-icons = "3.0.0"
error-stack = "0.5.0"
freyr = "0.2.2"
strum = "0.26.3"
strum_macros = "0.26.4"
tracing-wasm = "0.2.1"
web-sys = { version = "0.3.77", features = ["console"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:nixblitz_system"]
