[package]
name = "nixblitz_system"
version = "0.1.0"
edition = "2024"
license = "MIT"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alejandra = "3.1.0"
nixblitz_core = { workspace = true }
error-stack = "0.5.0"
garde = { version = "0.18.0", features = ["full"] }
handlebars = "6.1.0"
include_dir = { version = "0.7.4", features = ["glob"] }
log = "0.4"
raw-cpuid = "11.5.0"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.128"
sha-crypt = "0.5.0"
strum = "0.26.3"
strum_macros = "0.26.4"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "sync", "process", "io-util", "macros"] }
toml = "0.8.12"

[dev-dependencies]
tempdir = "0.3.7"
tempfile = "3.12.0"
